Fix android incompatibility